2005-12-31  Phil Blundell  <pb@reciva.com>

	* Version 0.48 released.

2005-12-31  Phil Blundell  <pb@reciva.com>

	* mkinstalldirs: New file.
	* Makefile.am (EXTRA_DIST): Distribute it.

2005-12-30  Florian Boor  <florian@kernelconcepts.de>

	* Makefile.am: Move chmod statements to install-data-hook due
	               to automake limitations.

2005-12-30  Phil Blundell  <pb@reciva.com>

	* Makefile.am (install-exec-hook): New.
	(bin_PROGRAMS): Remove bnep-helper, rfcomm-helper.
	